@@ -61,12 +61,12 @@ import org.apache.catalina.tribes.transport.nio.NioReceiver;
 import org.apache.catalina.util.ServerInfo;
 import org.apache.catalina.valves.AccessLogValve;
 import org.apache.catalina.webresources.StandardRoot;
+import org.apache.coyote.http2.Http2Protocol;
 import org.apache.ofbiz.base.component.ComponentConfig;
 import org.apache.ofbiz.base.concurrent.ExecutionPool;
 import org.apache.ofbiz.base.container.Container;
 import org.apache.ofbiz.base.container.ContainerConfig;
 import org.apache.ofbiz.base.container.ContainerConfig.Configuration;
-import org.apache.ofbiz.base.container.ContainerConfig.Configuration.Property;
 import org.apache.ofbiz.base.container.ContainerException;
 import org.apache.ofbiz.base.start.Start;
 import org.apache.ofbiz.base.start.StartupCommand;
@@ -98,8 +98,8 @@ public class CatalinaContainer implements Container {
     public void init(List<StartupCommand> ofbizCommands, String name, String configFile) throws ContainerException {
 
         this.name = name;
-        ContainerConfig.Configuration configuration = ContainerConfig.getConfiguration(name, configFile);
-        Property engineConfig = retrieveTomcatEngineConfig(configuration);
+        ContainerConfig.Configuration configuration = ContainerConfig.getConfiguration(name);
+        Configuration.Property engineConfig = retrieveTomcatEngineConfig(configuration);
 
         // tomcat setup
         tomcat = prepareTomcatServer(configuration, engineConfig);
@@ -120,13 +120,14 @@ public class CatalinaContainer implements Container {
         }
 
         // clustering, valves and connectors setup
-        Property clusterProps = prepareTomcatClustering(host, engineConfig);
+        Configuration.Property clusterProps = prepareTomcatClustering(host, engineConfig);
         prepareTomcatEngineValves(engineConfig).forEach(valve -> ((StandardEngine)engine).addValve(valve));
         prepareTomcatConnectors(configuration).forEach(connector -> tomcat.getService().addConnector(connector));
 
         loadWebapps(tomcat, configuration, clusterProps);
     }
 
+    @Override
     public boolean start() throws ContainerException {
         try {
             tomcat.start();
@@ -142,7 +143,8 @@ public class CatalinaContainer implements Container {
         return true;
     }
 
-    public void stop() throws ContainerException {
+    @Override
+    public void stop() {
         try {
             tomcat.stop();
         } catch (LifecycleException e) {
@@ -152,12 +154,13 @@ public class CatalinaContainer implements Container {
         }
     }
 
+    @Override
     public String getName() {
         return name;
     }
 
-    private Property retrieveTomcatEngineConfig(ContainerConfig.Configuration cc) throws ContainerException {
-        List<ContainerConfig.Configuration.Property> engineProps = cc.getPropertiesWithValue("engine");
+    private static Configuration.Property retrieveTomcatEngineConfig(Configuration cc) throws ContainerException {
+        List<Configuration.Property> engineProps = cc.getPropertiesWithValue("engine");
         if (UtilValidate.isEmpty(engineProps)) {
             throw new ContainerException("Cannot load CatalinaContainer; no engines defined.");
         }
@@ -167,9 +170,8 @@ public class CatalinaContainer implements Container {
         return engineProps.get(0);
     }
 
-    private Tomcat prepareTomcatServer(ContainerConfig.Configuration cc,
-            ContainerConfig.Configuration.Property engineConfig) throws ContainerException {
-
+    private static Tomcat prepareTomcatServer(ContainerConfig.Configuration cc, Configuration.Property engineConfig)
+            throws ContainerException {
         System.setProperty(Globals.CATALINA_HOME_PROP, System.getProperty("ofbiz.home") + "/" +
                     ContainerConfig.getPropertyValue(cc, "catalina-runtime-home", "runtime/catalina"));
         System.setProperty(Globals.CATALINA_BASE_PROP, System.getProperty(Globals.CATALINA_HOME_PROP));
@@ -177,11 +179,11 @@ public class CatalinaContainer implements Container {
         Tomcat tomcat = new Tomcat();
         tomcat.setBaseDir(System.getProperty("ofbiz.home"));
 
-        Property defaultHostProp = engineConfig.getProperty("default-host");
+        Configuration.Property defaultHostProp = engineConfig.getProperty("default-host");
         if (defaultHostProp == null) {
             throw new ContainerException("default-host element of server property is required for catalina!");
         }
-        tomcat.setHostname(defaultHostProp.value);
+        tomcat.setHostname(defaultHostProp.value());
 
         if (ContainerConfig.getPropertyValue(cc, "use-naming", false)) {
             tomcat.enableNaming();
@@ -197,9 +199,9 @@ public class CatalinaContainer implements Container {
         return tomcat;
     }
 
-    private Engine prepareTomcatEngine(Tomcat tomcat, Property engineConfig) {
+    private static Engine prepareTomcatEngine(Tomcat tomcat, Configuration.Property engineConfig) {
         Engine engine = tomcat.getEngine();
-        engine.setName(engineConfig.name);
+        engine.setName(engineConfig.name());
 
         // set the JVM Route property (JK/JK2)
         String jvmRoute = ContainerConfig.getPropertyValue(engineConfig, "jvm-route", null);
@@ -210,7 +212,7 @@ public class CatalinaContainer implements Container {
         return engine;
     }
 
-    private Host prepareHost(Tomcat tomcat, List<String> virtualHosts) {
+    private static Host prepareHost(Tomcat tomcat, List<String> virtualHosts) {
         Host host;
 
         if (UtilValidate.isEmpty(virtualHosts)) {
@@ -232,7 +234,7 @@ public class CatalinaContainer implements Container {
         return host;
     }
 
-    private Host prepareVirtualHost(Tomcat tomcat, List<String> virtualHosts) {
+    private static Host prepareVirtualHost(Tomcat tomcat, List<String> virtualHosts) {
         // assume that the first virtual-host will be the default; additional virtual-hosts will be aliases
         String hostName = virtualHosts.get(0);
         Host host;
@@ -254,10 +256,11 @@ public class CatalinaContainer implements Container {
         return host;
     }
 
-    private Property prepareTomcatClustering(Host host, Property engineConfig) throws ContainerException {
-        Property clusterProp = null;
+    private static Configuration.Property prepareTomcatClustering(Host host, Configuration.Property engineConfig)
+            throws ContainerException {
+        Configuration.Property clusterProp = null;
 
-        List<Property> clusterProps = engineConfig.getPropertiesWithValue("cluster");
+        List<Configuration.Property> clusterProps = engineConfig.getPropertiesWithValue("cluster");
         if (clusterProps.size() > 1) {
             throw new ContainerException("Only one cluster configuration allowed per engine");
         }
@@ -271,7 +274,7 @@ public class CatalinaContainer implements Container {
             channel.setMembershipService(prepareChannelMcastService(clusterProp));
 
             SimpleTcpCluster cluster = new SimpleTcpCluster();
-            cluster.setClusterName(clusterProp.name);
+            cluster.setClusterName(clusterProp.name());
             cluster.setManagerTemplate(prepareClusterManager(clusterProp));
             cluster.setChannel(channel);
             cluster.addValve(prepareClusterValve(clusterProp));
@@ -283,7 +286,7 @@ public class CatalinaContainer implements Container {
         return clusterProp;
     }
 
-    private NioReceiver prepareChannelReceiver(Property clusterProp) throws ContainerException {
+    private static NioReceiver prepareChannelReceiver(Configuration.Property clusterProp) throws ContainerException {
         NioReceiver listener = new NioReceiver();
 
         String tla = ContainerConfig.getPropertyValue(clusterProp, "tcp-listen-host", "auto");
@@ -304,11 +307,12 @@ public class CatalinaContainer implements Container {
         return listener;
     }
 
-    private ReplicationTransmitter prepareChannelSender(Property clusterProp) throws ContainerException {
+    private static ReplicationTransmitter prepareChannelSender(Configuration.Property clusterProp)
+            throws ContainerException {
         ReplicationTransmitter trans = new ReplicationTransmitter();
         try {
             MultiPointSender mps = (MultiPointSender)Class.forName(ContainerConfig.getPropertyValue(clusterProp,
-                    "replication-mode", "org.apache.catalina.tribes.transport.bio.PooledMultiSender")).newInstance();
+                    "replication-mode", "org.apache.catalina.tribes.transport.bio.PooledMultiSender")).getDeclaredConstructor().newInstance();
             trans.setTransport(mps);
         } catch (Exception exc) {
             throw new ContainerException("Cluster configuration requires a valid replication-mode property: " + exc.getMessage());
@@ -316,7 +320,8 @@ public class CatalinaContainer implements Container {
         return trans;
     }
 
-    private McastService prepareChannelMcastService(Property clusterProp) throws ContainerException {
+    private static McastService prepareChannelMcastService(Configuration.Property clusterProp)
+            throws ContainerException {
         McastService mcast = new McastService();
 
         String mcb = ContainerConfig.getPropertyValue(clusterProp, "mcast-bind-addr", null);
@@ -341,23 +346,24 @@ public class CatalinaContainer implements Container {
         return mcast;
     }
 
-    private ClusterManager prepareClusterManager(Property clusterProp) throws ContainerException {
+    private static ClusterManager prepareClusterManager(Configuration.Property clusterProp) throws ContainerException {
         String mgrClassName = ContainerConfig.getPropertyValue(clusterProp, "manager-class", "org.apache.catalina.ha.session.DeltaManager");
         try {
-            return (ClusterManager)Class.forName(mgrClassName).newInstance();
-        } catch (InstantiationException | IllegalAccessException | ClassNotFoundException e) {
+            return (ClusterManager)Class.forName(mgrClassName).getDeclaredConstructor().newInstance();
+        } catch (ReflectiveOperationException e) {
             throw new ContainerException("Cluster configuration requires a valid manager-class property", e);
         }
     }
 
-    private ReplicationValve prepareClusterValve(Property clusterProp) {
+    private static ReplicationValve prepareClusterValve(Configuration.Property clusterProp) {
         ReplicationValve clusterValve = new ReplicationValve();
         String defaultValveFilter = ".*\\.gif;.*\\.js;.*\\.jpg;.*\\.htm;.*\\.html;.*\\.txt;.*\\.png;.*\\.css;.*\\.ico;.*\\.htc;";
         clusterValve.setFilter(ContainerConfig.getPropertyValue(clusterProp, "rep-valve-filter", defaultValveFilter));
         return clusterValve;
     }
 
-    private List<Valve> prepareTomcatEngineValves(Property engineConfig) throws ContainerException {
+    private static List<Valve> prepareTomcatEngineValves(Configuration.Property engineConfig)
+            throws ContainerException {
         List<Valve> engineValves = new ArrayList<>();
 
         // configure the CrossSubdomainSessionValve
@@ -402,39 +408,47 @@ public class CatalinaContainer implements Container {
         return engineValves;
     }
 
-    private List<Connector> prepareTomcatConnectors(Configuration configuration) throws ContainerException {
-        List<Property> connectorProps = configuration.getPropertiesWithValue("connector");
+    private static List<Connector> prepareTomcatConnectors(Configuration configuration) throws ContainerException {
+        List<Configuration.Property> connectorProps = configuration.getPropertiesWithValue("connector");
         if (UtilValidate.isEmpty(connectorProps)) {
             throw new ContainerException("Cannot load CatalinaContainer; no connectors defined!");
         }
         return connectorProps.stream()
-            .filter(connectorProp -> UtilValidate.isNotEmpty(connectorProp.properties))
+            .filter(connectorProp -> UtilValidate.isNotEmpty(connectorProp.properties()))
             .map(connectorProp -> prepareConnector(connectorProp))
             .collect(Collectors.toList());
     }
 
-    private Connector prepareConnector(Property connectorProp) {
+    private static Connector prepareConnector(Configuration.Property connectorProp) {
         Connector connector = new Connector(ContainerConfig.getPropertyValue(connectorProp, "protocol", "HTTP/1.1"));
         connector.setPort(ContainerConfig.getPropertyValue(connectorProp, "port", 0) + Start.getInstance().getConfig().portOffset);
-
-        connectorProp.properties.values().stream()
-            .filter(prop -> !"protocol".equals(prop.name) && !"port".equals(prop.name))
+        if ("true".equals(ContainerConfig.getPropertyValue(connectorProp, "upgradeProtocol", "false"))) {
+            connector.addUpgradeProtocol(new Http2Protocol());
+            Debug.logInfo("Tomcat " + connector + ": enabled HTTP/2", module);
+        }
+        connectorProp.properties().values().stream()
+            .filter(prop -> {
+                String name = prop.name();
+                return !"protocol".equals(name) && !"upgradeProtocol".equals(name) && !"port".equals(name);
+            })
             .forEach(prop -> {
-                if (IntrospectionUtils.setProperty(connector, prop.name, prop.value)) {
-                    if (prop.name.indexOf("Pass") != -1) {
+                String name = prop.name();
+                String value = prop.value();
+                if (IntrospectionUtils.setProperty(connector, name, value)) {
+                    if (name.indexOf("Pass") != -1) {
                         // this property may be a password, do not include its value in the logs
-                        Debug.logInfo("Tomcat " + connector + ": set " + prop.name, module);
+                        Debug.logInfo("Tomcat " + connector + ": set " + name, module);
                     } else {
-                        Debug.logInfo("Tomcat " + connector + ": set " + prop.name + "=" + prop.value, module);
+                        Debug.logInfo("Tomcat " + connector + ": set " + name + "=" + value, module);
                     }
                 } else {
-                    Debug.logWarning("Tomcat " + connector + ": ignored parameter " + prop.name, module);
+                    Debug.logWarning("Tomcat " + connector + ": ignored parameter " + name, module);
                 }
             });
         return connector;
     }
 
-    private void loadWebapps(Tomcat tomcat, ContainerConfig.Configuration configuration, Property clusterProp) {
+    private static void loadWebapps(Tomcat tomcat, Configuration configuration, Configuration.Property clusterProp) {
         ScheduledExecutorService executor = ExecutionPool.getScheduledExecutor(new ThreadGroup(module),
                 "catalina-startup", Runtime.getRuntime().availableProcessors(), 0, true);
         List<Future<Context>> futures = new ArrayList<>();
@@ -455,14 +469,15 @@ public class CatalinaContainer implements Container {
                 /* webapp is loaded already (overridden). Therefore, disable
                  * app bar display on overridden apps and do not load */
                 appInfo.setAppBarDisplay(false);
-                Debug.logInfo("Duplicate webapp mount (overridding); not loading : " + appInfo.getName() + " / " + appInfo.getLocation(), module);
+                Debug.logInfo("Duplicate webapp mount (overridding); not loading : "
+                        + appInfo.getName() + " / " + appInfo.location(), module);
             }
         }
         ExecutionPool.getAllFutures(futures);
         executor.shutdown();
     }
 
-    private List<String> getWebappMounts(ComponentConfig.WebappInfo webappInfo) {
+    private static List<String> getWebappMounts(ComponentConfig.WebappInfo webappInfo) {
         List<String> allAppsMounts = new ArrayList<>();
         String engineName = webappInfo.server;
         String mount = webappInfo.getContextRoot();
@@ -475,24 +490,22 @@ public class CatalinaContainer implements Container {
         return allAppsMounts;
     }
 
-    private Callable<Context> createCallableContext(Tomcat tomcat, ComponentConfig.WebappInfo appInfo,
-            Property clusterProp, ContainerConfig.Configuration configuration) {
+    private static Callable<Context> createCallableContext(Tomcat tomcat, ComponentConfig.WebappInfo appInfo,
+            Configuration.Property clusterProp, ContainerConfig.Configuration configuration) {
 
         Debug.logInfo("Creating context [" + appInfo.name + "]", module);
         Host host = prepareHost(tomcat, appInfo.getVirtualHosts());
 
-        return new Callable<Context>() {
-            public Context call() throws ContainerException, LifecycleException {
-                StandardContext context = prepareContext(host, configuration, appInfo, clusterProp);
-                Debug.logInfo("host[" + host + "].addChild(" + context + ")", module);
-                host.addChild(context);
-                return context;
-            }
+        return () -> {
+            StandardContext context = prepareContext(host, configuration, appInfo, clusterProp);
+            Debug.logInfo("host[" + host + "].addChild(" + context + ")", module);
+            host.addChild(context);
+            return context;
         };
     }
 
-    private StandardContext prepareContext(Host host, ContainerConfig.Configuration configuration,
-            ComponentConfig.WebappInfo appInfo, Property clusterProp) throws ContainerException {
+    private static StandardContext prepareContext(Host host, ContainerConfig.Configuration configuration,
+            ComponentConfig.WebappInfo appInfo, Configuration.Property clusterProp) throws ContainerException {
 
         StandardContext context = new StandardContext();
         Tomcat.initWebappDefaults(context);
@@ -551,16 +564,14 @@ public class CatalinaContainer implements Container {
         return context;
     }
 
-    private String getWebappRootLocation(ComponentConfig.WebappInfo appInfo) {
-        String location = appInfo.componentConfig.getRootLocation() + appInfo.location;
-        location = location.replace('\\', '/');
-        if (location.endsWith("/")) {
-            location = location.substring(0, location.length() - 1);
-        }
-        return location;
+    private static String getWebappRootLocation(ComponentConfig.WebappInfo appInfo) {
+        return appInfo.componentConfig.rootLocation()
+                .resolve(appInfo.location.replace('\\', '/'))
+                .normalize()
+                .toString();
     }
 
-    private String getWebappMountPoint(ComponentConfig.WebappInfo appInfo) {
+    private static String getWebappMountPoint(ComponentConfig.WebappInfo appInfo) {
         String mount = appInfo.mountPoint;
         if (mount.endsWith("/*")) {
             mount = mount.substring(0, mount.length() - 2);
